[package]
name = "battleship"
version = "0.1.0"
authors = ["deloff <patch419@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
getopts = "0.2"
websocket = "0.23.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
rand = "0.7"
itertools = "0.8"